# nonebot_plugin_web

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vue.config.js
nonebot_plugin_web/: __init__.py  fastapi.py  sender.py  webSio.py
public/: index.html
src/: App.vue  main.ts
src/assets/: parser.ts  utils.ts
src/components/: ChatList.vue  Messages.vue  Sender.vue
src/plugins/: gotobottom.ts  socketio.js
src/router/: index.ts
src/store/: index.ts
src/views/: About.vue  Home.vue
